--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,11 @@
 .git
 .gradle
-build/
-*.jar
+build/classes/
+build/generated/
+build/reports/
+build/resources/
+build/test-results/
+build/tmp/
 *.log
 .idea/
 *.iml
