--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "9000:9000"
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     environment:
       - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/specshield
     networks:
@@ -23,6 +24,11 @@ services:
       - mongodb_data:/data/db
     networks:
       - specshield-network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   mongodb_data:
