kafka integration for async

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,17 @@ spring:
     mongodb:
       uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/specshield}
       database: specshield
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: specshield-executor
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: com.dpw.specshield.model
 
 server:
   servlet:
@@ -15,3 +26,10 @@ logging:
   level:
     com.dpw.specshield: DEBUG
     org.springframework.data.mongodb: DEBUG
+    org.springframework.kafka: DEBUG
+
+# Custom configuration
+specshield:
+  kafka:
+    topics:
+      test-execution: test-execution-requests
